# excel-reader-mcp

./: README.md  pyproject.toml
src/excel_reader_mcp/: __init__.py  server.py
src/excel_reader_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
